# Yt-DL_Frtnd

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  buildy.yml  pr-check.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/ytmusicdl/app/: MainActivity.kt
app/src/main/kotlin/com/ytmusicdl/app/data/: AppSettings.kt  SettingsPrefs.kt
app/src/main/kotlin/com/ytmusicdl/app/data/api/: EmbeddedPythonBackend.kt  ExtractorBackend.kt  ExtractorProvider.kt  LrcLibService.kt  NewPipeBackend.kt  NewPipeFallbackBackend.kt  NewPipeService.kt  PythonBridge.kt  YtmusicdlApi.kt
app/src/main/kotlin/com/ytmusicdl/app/data/db/: HistoryCache.kt
app/src/main/kotlin/com/ytmusicdl/app/data/model/: AudioFormatListing.kt  AudioFormatOption.kt  Track.kt
app/src/main/kotlin/com/ytmusicdl/app/data/repository/: MusicRepository.kt
app/src/main/kotlin/com/ytmusicdl/app/service/: DownloadService.kt
app/src/main/python/: yt_albums.py  yt_backend.py  yt_common.py  yt_playlists.py  yt_tops.py
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
docs/: UX_UI_REDESIGN_BLUEPRINT.md
gradle/: libs.versions.toml
tools/: ytdlp_cli.py
ytmusicdl/: README.md  pyproject.toml  requirements.txt
ytmusicdl/ytmusicdl/: __init__.py  cache.py  cli.py  cover.py  downloader.py  lyrics.py  metadata.py  naming.py  search.py
ytmusicdl/ytmusicdl/apis/: __init__.py  ytmusic.py
ytmusicdl/ytmusicdl/utils/: __init__.py  config.py  display.py  paths.py
(+12 files in other folders)
